--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
     <script src="js/highcharts.src.js"></script>
-    <script src="js/no-data-to-display.js"></script>
+    <!--<script src="js/no-data-to-display.js"></script>-->
     <!--<script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>-->
 
     <!--<script src="https://img.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>-->
@@ -17,7 +17,8 @@
     <!--<script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>-->
 </head>
 <body>
-<div id="container" style="min-width:400px;height:400px">
+<!--<script src="http://imgcd.hexun.com/commonhead/js/commonhead.js"></script>-->
+<div id="container" style="min-width:400px;height:400px;background-color: #8f241c">
 
 </div>
 </body>
