--- a/test.html
+++ b/test.html
@@ -4,10 +4,12 @@
     <meta charset="gb2312">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <meta >
     <title>test</title>
+
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
-    <script src="js/cdGlobalObject.js"></script>
+    <!--<script src="js/cdGlobalObject.js"></script>-->
     <script src="js/highcharts.js"></script>
     <!--<script src="js/no-data-to-display.js"></script>-->
     <!--<script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>-->
@@ -36,9 +38,10 @@
 <script>
 
     $(function () {
-        console.log('CDGlobal.apiList.tgApiHost=',ApiHostGlobal.apiList.tgApiHost)
+//        console.log('CDGlobal.apiList.tgApiHost=',ApiHostGlobal.apiList.tgApiHost)
         var _poolId='92',_type= 0,_isHome=true//false;//
-                ,_url='http://10.0.201.136:8083/lhjx/front/sellPoolChart/';//http://test.mahai.hexun.com:8210/lhjx/data/data.json';//接口请求地址
+                ,_url='http://test.mahai.hexun.com:8210/2017/0823lhjx2.0/data/data.json';//接口请求地址
+        //'http://10.0.201.136:8083/lhjx/front/sellPoolChart/';//
         new lineIndex('container0',_url,_poolId,0,true);
 
         new lineIndex('container1',_url,_poolId,1,false);
