--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="gb2312">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>test</title>
+    <title>test0</title>
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
     <script src="js/highcharts.src.js"></script>
