--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta >
-    <title>test</title>
+    <title>test1</title>
 
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
