--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta >
-    <title>test1</title>
+    <title>test5</title>
 
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
@@ -21,15 +21,15 @@
 </head>
 <body>
 <!--<script src="http://imgcd.hexun.com/commonhead/js/commonhead.js"></script>-->
-总收益率%
+鎬绘敹鐩婄巼%
 <div id="container0" style="min-width:400px;height:400px;background-color: #8f241c">
 
 </div>
-近一个月走势
+杩戜竴涓湀璧板娍
 <div id="container1" style="min-width:400px;height:400px;background-color: #8f241c">
 
 </div>
-累计总收益率
+绱鎬绘敹鐩婄巼
 <div id="container2" style="min-width:400px;height:400px;background-color: #8f241c">
 
 </div>
@@ -40,7 +40,7 @@
     $(function () {
 //        console.log('CDGlobal.apiList.tgApiHost=',ApiHostGlobal.apiList.tgApiHost)
         var _poolId='249',_type= 0,_isHome=true//false;//
-                ,_url='http://60.28.251.103:8088//lhjx/front/sellPoolChart/';//'http://test.mahai.hexun.com:8210/2017/0823lhjx2.0/data/data.json';//接口请求地址
+                ,_url='http://60.28.251.103:8088//lhjx/front/sellPoolChart/';//'http://test.mahai.hexun.com:8210/2017/0823lhjx2.0/data/data.json';//鎺ュ彛璇锋眰鍦板潃
         //
         new lineIndex('container0',_url,_poolId,0,true);
 
