--- a/test.html
+++ b/test.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="gb2312">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta >
-    <title>test50</title>
+    <title>test250</title>
 
     <!--<link href="css/highcharts.css" rel="stylesheet" type="text/css">-->
     <script src="http://imgcd.hexun.com/js/jquery.js"></script>
